--- a/Accueil.html
+++ b/Accueil.html
@@ -53,7 +53,8 @@
         <p><a href="Mention_Legales.HTML">Mentions Légales</a></p>
       </section>
       <section id="réseaux">
-        <p>test</p>
+        <p><a href="https://www.linkedin.com/in/maxime-bondeux-597a7217a/">LinkedIn</a></p>
+        <p><a href="">Code Pen</a></p>
       </section>
   </footer>   
 </body>
