--- a/Accueil.html
+++ b/Accueil.html
@@ -12,38 +12,83 @@
 <body>
     <header> 
       <section id="header_main_section">
-        <section>
-
-        </section>
+        <section></section>
 
         <section id="titre">
           <h1>Bondeux Maxime</h1>
           <h1>Développeur Web</h1>
         </section>
+        <section id="Cv">
+          <a href="CV_Bondeux_Maxime.pdf" download="CV_Bondeux_Maxime">Télécharger le CV</a>
+        </section>
+
       </section>
 
-      <section id="Cv">
-        <a href="CV_Bondeux_Maxime.pdf" download="CV_Bondeux_Maxime">Télécharger le CV</a>
-      </section>
-    </section>
       <nav class="menu">
         <ul>
-          <li><a href="#Accueil">Accueil</a></li>
+          <li><a href="présentation">Accueil</a></li>
           <li><a href="Formations">Formations</a></li>
           <li><a href="Compétences">Compétences</a></li>
           <li><a href="Expériences">Expériences</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
-
+      
     </header>
-    <p>Présentation :</p>
-    <div> <ul>
-        <li>NOM / Prénom: BONDEUX Maxime</li>
-        <li>Age: 20ans</li>
-        <li>Adresse: 62 Av du Colonel Manhès, 18100 VIERZON</li>
-        <li>Tel: 06-59-89-48-33</li>
-    </ul></div>
+    <main>
+      
+        <div>
+          <p>Présentation :</p>
+          <ul>
+            <li>NOM / Prénom: BONDEUX Maxime</li>
+            <li>Age: 20ans</li>
+            <li>Adresse: 62 Av du Colonel Manhès,</li>
+            <li>18100 VIERZON</li>
+            <li>Tel: 06-59-89-48-33</li>
+          </ul>
+        </div>
+      <p>Formation :</p>
+        <div>
+          <ul>
+            <li>Tennis : Classé 30/4 et Arbitre niveau A1</li>
+            <li>Judo : 10 ans de pratique au dojo vierzonnais</li>
+            <li>Ju-jitsu : 5 ans de pratique et vainqueur face aux vice-championne d'Europe en 2015.</li>
+            <li>Pétanque : membre associatif</li>
+            <li>Streamer sur Twitch</li>
+          </ul>
+        </div>
+      <p>Compétences :</p>
+        <div>
+          <ul>
+            <li>Tennis : Classé 30/4 et Arbitre niveau A1</li>
+            <li>Judo : 10 ans de pratique au dojo vierzonnais</li>
+            <li>Ju-jitsu : 5 ans de pratique et vainqueur face aux vice-championne d'Europe en 2015.</li>
+            <li>Pétanque : membre associatif</li>
+            <li>Streamer sur Twitch</li>
+          </ul>
+        </div>
+      <p>Hobby :</p>
+      <div>
+        <ul>
+          <li>Tennis : Classé 30/4 et Arbitre niveau A1</li>
+          <li>Judo : 10 ans de pratique au dojo vierzonnais</li>
+          <li>Ju-jitsu : 5 ans de pratique et vainqueur face aux vice-championne d'Europe en 2015.</li>
+          <li>Pétanque : membre associatif</li>
+          <li>Streamer sur Twitch</li>
+        </ul>
+      </div>
+      <p>Hobby :</p>
+      <div>
+        <ul>
+          <li>Tennis : Classé 30/4 et Arbitre niveau A1</li>
+          <li>Judo : 10 ans de pratique au dojo vierzonnais</li>
+          <li>Ju-jitsu : 5 ans de pratique et vainqueur face aux vice-championne d'Europe en 2015.</li>
+          <li>Pétanque : membre associatif</li>
+          <li>Streamer sur Twitch</li>
+        </ul>
+      </div>
+    </main>
+   
   <footer>
       <section id="title">
         <p>Bondeux Maxime</p>
