--- a/Mobile.html
+++ b/Mobile.html
@@ -2,150 +2,176 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Style_mobile.css">
-  <title>CV en ligne</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style_mobile.css">
+    <title>CV en ligne</title>
 </head>
 
 <body>
-  <header>
-    <section id="header_main_section">
+    <header>
+        <section id="header_main_section">
 
-      <section>
-        <div class="dropdown">
-          <button class="dropbtn">Menu</button>
-          <div class="dropdown-content">
-            <a href="#presentation">Accueil</a>
-            <a href="#formation">Formations</a>
-            <a href="Compétences">Compétences</a>
-            <a href="Expériences">Expériences</a>
-            <a href="#Contact">Contact</a>
-          </div>
+            <section class="dropdown">
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-content">
+                    <a href="#presentation">Accueil</a>
+                    <a href="#formation">Formations</a>
+                    <a href="Compétences">Compétences</a>
+                    <a href="Expériences">Expériences</a>
+                    <a href="#Contact">Contact</a>
+                    <div id="fill_content"></div>
+                </div>
+            </section>
+
+            <section id="titre">
+                <h1>Bondeux Maxime</h1>
+                <h1>Développeur Web</h1>
+            </section>
+
+            <section id="Cv">
+                <a href="CV_Bondeux_Maxime.pdf" download="CV_Bondeux_Maxime"><img class="icon" src="Images/CV.svg"></a>
+                <p>CV.pdf</p>
+            </section>
+
+        </section>
+
+        <nav class="menu">
+            <ul>
+                <li><a href="#presentation">Accueil</a></li>
+                <li><a href="#formation">Formations</a></li>
+                <li><a href="#Competence">Compétences</a></li>
+                <li><a href="Expériences">Expériences</a></li>
+                <li><a href="#Contact">Contact</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <main id="main">
+        <img id="photo" src="photo_id.jpg">
+        <div id="presentation" class="main_block">
+            <div class="block">
+                <h2>Présentation :</h2>
+                <ul>
+                    <li class="list"><img class="icon" src="Images/user.svg">
+                        <p>BONDEUX Maxime</p>
+                    </li>
+                    <li class="list"><img class="icon" src="Images/birthday-cake.svg">
+                        <p>24/01/2001 (20ans)</p>
+                    </li>
+                    <li class="list"><img class="icon" src="Images/location2.svg">
+                        <p>62 Av du Colonel Manhès,18100 VIERZON</p>
+                    </li>
+                    <li class="list"><img class="icon" src="Images/phone.svg">
+                        <p>06-59-89-48-33</p>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </section>
 
-      <section id="titre">
-        <h1>Bondeux Maxime</h1>
-        <h1>Développeur Web</h1>
-      </section>
+        <div id="formation" class="main_block">
+            <div class="block">
+                <h2>Formation :</h2>
+                <ul>
+                    <li>Licence L3 Informatique générale au CNAM Vierzon (2021-2022)</li>
+                    <li>BTS Système Numérique option Informatique et Réseau (SNIR) (2019-2021)</li>
+                    <li>Bac STI2D au Lycée H.BRISSON (2017-2019)</li>
+                    <li>Brevet des collèges</li>
+                </ul>
+            </div>
+        </div>
 
-      <section id="Cv">
-        <a href="CV_Bondeux_Maxime.pdf" download="CV_Bondeux_Maxime">Télécharger le CV</a>
-      </section>
+        <div id="Competence" class="main_block">
+            <div class="block">
+                <h2>Compétences + projet(s) associé(s):</h2>
+                <ul>
+                    <li class="list">
+                        <img class="img" src="Images/HTML5.png">
+                        <p>Conception de site Web</p>
+                    </li>
 
-    </section>
+                    <li class="list">
+                        <img class="img" src="Images/php.png">
+                        <p>Gestion de BDD, Conception site Web</p>
+                    </li>
 
-    <nav class="menu">
-      <ul>
-        <li><a href="#presentation">Accueil</a></li>
-        <li><a href="#formation">Formations</a></li>
-        <li><a href="Compétences">Compétences</a></li>
-        <li><a href="Expériences">Expériences</a></li>
-        <li><a href="#Contact">Contact</a></li>
-      </ul>
-    </nav>
+                    <li class="list">
+                        <img class="img" src="Images/CSS.png">
+                        <p>Mise en beauté des pages Web</p>
+                    </li>
 
-  </header>
-  
-  <main id="main">
-    <img id="photo" src="photo_id.jpg">
+                    <li class="list">
+                        <img class="img" src="Images/JavaScript.png">
+                        <p>Animation des pages Web</p>
+                    </li>
 
-    <div class="block" id="presentation">
-      <p class="section">Présentation :</p>
-      <ul>
-        <li>NOM / Prénom: BONDEUX Maxime</li>
-        <li>Age: 20ans</li>
-        <li>Adresse: 62 Av du Colonel Manhès,</li>
-        <li>18100 VIERZON</li>
-        <li>Tel: 06-59-89-48-33</li>
-      </ul>
-    </div>
+                    <li class="list">
+                        <img class="img" src="Images/C.png">
+                        <p>Projet scolaire</p>
+                    </li>
 
-    <div class="block" id="formation">
-      <p class="section">Formation :</p>
-      <ul>
-        <li>Tennis : Classé 30/4 et Arbitre niveau A1</li>
-        <li>Judo : 10 ans de pratique au dojo vierzonnais</li>
-        <li>Ju-jitsu : 5 ans de pratique et vainqueur face aux vice-championne d'Europe en 2015.</li>
-        <li>Pétanque : membre associatif</li>
-        <li>Streamer sur Twitch</li>
-      </ul>
-    </div>
+                    <li class="list">
+                        <img class="img" src="Images/Arduino.png">
+                        <p>Conception/Automatisation d'une serre hydroponique</p>
+                    </li>
 
-    <p>Compétences + projet(s) associé(s):</p>
-    <div>
-      <ul>
-        <li>
-          <div class="list_comp"><img class="img_comp" src="Images/HTML5.png">
-            <p>Conception de site Web</p>
-          </div>
-        </li><br>
-        <li>
-          <div class="list_comp"><img class="img_comp" src="Images/php.png">
-            <p>Gestion de BDD, Conception site Web</p>
-          </div>
-        </li><br>
-        <li>
-          <div class="list_comp"><img class="img_comp" src="Images/CSS.png">
-            <p>Mise en beauté des pages Web</p>
-          </div>
-        </li><br>
-        <li>
-          <div class="list_comp"><img class="img_comp" src="Images/JavaScript.png">
-            <p>Animation des pages Web</p>
-          </div>
-        </li><br>
-        <li>
-          <div class="list_comp"><img class="img_comp" src="Images/C.png">
-            <p>Projet scolaire</p>
-          </div>
-        </li><br>
-        <li>
-          <div class="list_comp"><img class="img_comp" src="Images/Arduino.png">
-            <p>Conception/Automatisation d'une serre hydroponique</p>
-          </div>
-        </li><br>
-        <li>
-          <div class="list_comp"><img class="img_comp" src="Images/mysql.png">
-            <p>Création/Gestion de BDD</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <p>Hobby :</p>
-    <div>
-      <ul>
-        <li>Tennis : Classé 30/4 et Arbitre niveau A1</li>
-        <li>Judo : 10 ans de pratique au dojo vierzonnais</li>
-        <li>Ju-jitsu : 5 ans de pratique et vainqueur face aux vice-championne d'Europe en 2015.</li>
-        <li>Pétanque : membre associatif</li>
-        <li>Streamer sur Twitch</li>
-      </ul>
-    </div>
-  </main>
+                    <li class="list">
+                        <img class="img" src="Images/mysql.png">
+                        <p>Création/Gestion de BDD</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-  <footer id="Contact">
-    <section id="main_section_footer">
+        <div id="Hobby" class="main_block"></div>
+        <div class="block">
+            <h2>Hobby :</h2>
+            <ul>
+                <li class="list"><img class="icon" src="Images/Tennis.svg">
+                    <p>Tennis: Classé 30/4 et Arbitre niveau A1</p>
+                </li>
+                <li class="list"><img class="icon" src="Images/Judo.svg">
+                    <p>Judo: 10 ans de pratique au dojo vierzonnais</p>
+                </li>
+                <li class="list"><img class="icon" src="Images/Judo.svg">
+                    <p>Ju-Jitsu: 5 ans de pratique et vainqueur face aux vice-championne d'Europe en 2015</p>
+                </li>
+                <li class="list"><img class="icon" src="Images/Petanque.png">
+                    <p>Pétanque: membre associatif</p>
+                </li>
+                <li class="list"><img class="icon" src="Images/Twitch.svg">
+                    <p>Streamer sur Twitch</p>
+                </li>
+            </ul>
+        </div>
+        </div>
+    </main>
 
-      <section class="section_footer">
-        <p>Bondeux Maxime</p>
-        <p> Développeur Web</p>
-      </section>
+    <footer id="Contact">
+        <section id="main_section_footer">
 
-      <section class="section_footer">
-        <p><a href="Mention_Legales.HTML">Mentions Légales</a></p>
-      </section>
+            <section class="section_footer">
+                <p>Bondeux Maxime</p>
+                <p> Développeur Web</p>
+            </section>
 
-      <section class="section_footer">
-        <div><a href="https://www.linkedin.com/in/maxime-bondeux-597a7217a/"><img class="img_contact"
-              src="Images/LinkedIn.png"></a></div>
-        <div><a href="https://codepen.io/maximebondeux"><img class="img_contact" src="Images/CodePen.png"></a></div>
-      </section>
-    </section>
+            <section class="section_footer">
+                <p><a href="Mention_Legales.HTML">Mentions Légales</a></p>
+            </section>
 
-  </footer>
+            <section class="section_footer">
+                <div>
+                    <a href="https://www.linkedin.com/in/maxime-bondeux-597a7217a/"><img class="img" src="Images/linkedin.svg"></a>
+                </div>
+                <div>
+                    <a href="https://codepen.io/maximebondeux"><img class="img" src="Images/CodePen.png"></a>
+                </div>
+            </section>
+        </section>
+
+    </footer>
 </body>
 
 </html>
