--- a/Mobile.html
+++ b/Mobile.html
@@ -125,6 +125,24 @@
             </div>
         </div>
 
+        <div id="Experiences" class="main_block">
+            <div class="block">
+                <h2>Expériences :</h2>
+                <ul>
+                    <li>
+                        <img class="img" src="Images/veolia.png"> Intérimaire chez MANPOWER en tant que Ripeur pour Véolia Vierzon / Bourges (Vacances d'été)
+                    </li>
+                    <li>
+                        <img class="img" src="Images/signall.png"> Stage BTS en Entreprise chez Signall Nov2019 - Dec2019 (4 semaines)
+                    </li>
+                    <li>
+                        <img class="img" src="Images/taunt.png"> Community Manager TauntFr | 2020 - Aujourd'hui
+                    </li>
+                    <li><img class="img" src="Images/horyjin.jpg">Manager d'équipe Esport | 2018 - Aujourd'hui</li>
+                </ul>
+            </div>
+        </div>
+
         <div id="Hobby" class="main_block"></div>
         <div class="block">
             <h2>Hobby :</h2>
