--- a/Mobile.html
+++ b/Mobile.html
@@ -18,8 +18,8 @@
                 <div class="dropdown-content">
                     <a href="#presentation">Accueil</a>
                     <a href="#formation">Formations</a>
-                    <a href="Compétences">Compétences</a>
-                    <a href="Expériences">Expériences</a>
+                    <a href="#Competence">Compétences</a>
+                    <a href="#Experiences">Expériences</a>
                     <a href="#Contact">Contact</a>
                     <div id="fill_content"></div>
                 </div>
@@ -42,7 +42,7 @@
                 <li><a href="#presentation">Accueil</a></li>
                 <li><a href="#formation">Formations</a></li>
                 <li><a href="#Competence">Compétences</a></li>
-                <li><a href="Expériences">Expériences</a></li>
+                <li><a href="#Experiences">Expériences</a></li>
                 <li><a href="#Contact">Contact</a></li>
             </ul>
         </nav>
@@ -75,10 +75,10 @@
             <div class="block">
                 <h2>Formation :</h2>
                 <ul>
-                    <li>Licence L3 Informatique générale au CNAM Vierzon (2021-2022)</li>
-                    <li>BTS Système Numérique option Informatique et Réseau (SNIR) (2019-2021)</li>
-                    <li>Bac STI2D au Lycée H.BRISSON (2017-2019)</li>
-                    <li>Brevet des collèges</li>
+                    <li class="form_list">Licence L3 Informatique générale au CNAM Vierzon (2021-2022)</li>
+                    <li class="form_list">BTS Système Numérique option Informatique et Réseau (SNIR) (2019-2021)</li>
+                    <li class="form_list">Bac STI2D au Lycée H.BRISSON (2017-2019)</li>
+                    <li class="form_list">Brevet des collèges</li>
                 </ul>
             </div>
         </div>
@@ -129,16 +129,16 @@
             <div class="block">
                 <h2>Expériences :</h2>
                 <ul>
-                    <li>
+                    <li class="list">
                         <img class="img" src="Images/veolia.png"> Intérimaire chez MANPOWER en tant que Ripeur pour Véolia Vierzon / Bourges (Vacances d'été)
                     </li>
-                    <li>
+                    <li class="list">
                         <img class="img" src="Images/signall.png"> Stage BTS en Entreprise chez Signall Nov2019 - Dec2019 (4 semaines)
                     </li>
-                    <li>
+                    <li class="list">
                         <img class="img" src="Images/taunt.png"> Community Manager TauntFr | 2020 - Aujourd'hui
                     </li>
-                    <li><img class="img" src="Images/horyjin.jpg">Manager d'équipe Esport | 2018 - Aujourd'hui</li>
+                    <li class="list"><img class="img" src="Images/horyjin.jpg">Manager d'équipe Esport | 2018 - Aujourd'hui</li>
                 </ul>
             </div>
         </div>
