--- a/Mobile.html
+++ b/Mobile.html
@@ -176,7 +176,7 @@
             </section>
 
             <section class="section_footer">
-                <p><a href="Mention_Legales.HTML">Mentions Légales</a></p>
+                <p><a href="Mentions légales.html">Mentions Légales</a></p>
             </section>
 
             <section class="section_footer">
