Fin version Mobile

--- a/Mobile.html
+++ b/Mobile.html
@@ -16,7 +16,7 @@
             <section class="dropdown">
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
-                    <a href="#presentation">Accueil</a>
+                    <a href="#presentation">Présentation</a>
                     <a href="#formation">Formations</a>
                     <a href="#Competence">Compétences</a>
                     <a href="#Experiences">Expériences</a>
@@ -26,12 +26,11 @@
             </section>
 
             <section id="titre">
-                <h1>Bondeux Maxime</h1>
-                <h1>Développeur Web</h1>
+                <h1>Bondeux Maxime Développeur Web</h1>
             </section>
 
             <section id="Cv">
-                <a href="CV_Bondeux_Maxime.pdf" download="CV_Bondeux_Maxime"><img class="icon" src="Images/CV.svg"></a>
+                <a href="CV_Bondeux_Maxime.pdf" download="CV_Bondeux_Maxime"><img class="icon" id="CV" src="Images/CV.svg"></a>
                 <p>CV.pdf</p>
             </section>
 
@@ -75,10 +74,38 @@
             <div class="block">
                 <h2>Formation :</h2>
                 <ul>
-                    <li class="form_list">Licence L3 Informatique générale au CNAM Vierzon (2021-2022)</li>
-                    <li class="form_list">BTS Système Numérique option Informatique et Réseau (SNIR) (2019-2021)</li>
-                    <li class="form_list">Bac STI2D au Lycée H.BRISSON (2017-2019)</li>
-                    <li class="form_list">Brevet des collèges</li>
+                    <li class="form_list">
+                        <p class="form_date">2021-2022</p>
+                        <div class="form_content">
+                            <p class="form_type">Licence L3 Informatique générale </p>
+                            <p class="form_lieu">CNAM Vierzon</p>
+                        </div>
+
+                    </li>
+                    <li class="form_list">
+                        <p class="form_date">2019-2021 </p>
+                        <div class="form_content">
+                            <p class="form_type">BTS Système Numérique option Informatique et Réseau (SNIR)</p>
+                            <p class="form_lieu">Lycée H.BRISSON à Vierzon</p>
+                        </div>
+
+                    </li>
+                    <li class="form_list">
+                        <p class="form_date">2017-2019 </p>
+                        <div class="form_content">
+                            <p class="form_type">Bac STI2D </p>
+                            <p class="form_lieu">Lycée H.BRISSON à Vierzon</p>
+                        </div>
+
+                    </li>
+                    <li class="form_list">
+                        <p class="form_date">2016-2017 </p>
+                        <div class="form_content">
+                            <p class="form_type">Brevet des collèges </p>
+                            <p class="form_lieu">Collège E.VAILLANT</p>
+                        </div>
+
+                    </li>
                 </ul>
             </div>
         </div>
@@ -130,15 +157,33 @@
                 <h2>Expériences :</h2>
                 <ul>
                     <li class="list">
-                        <img class="img" src="Images/veolia.png"> Intérimaire chez MANPOWER en tant que Ripeur pour Véolia Vierzon / Bourges (Vacances d'été)
+                        <img class="img" src="Images/veolia.png">
+                        <div class="exp_content">
+                            <p>Intérimaire chez MANPOWER en tant que Ripeur pour Véolia Vierzon / Bourges (Vacances d'été)</p>
+                        </div>
+
                     </li>
                     <li class="list">
-                        <img class="img" src="Images/signall.png"> Stage BTS en Entreprise chez Signall Nov2019 - Dec2019 (4 semaines)
+                        <img class="img" src="Images/signall.png">
+                        <div class="exp_content">
+                            <p>Stage BTS en Entreprise chez Signall Nov2019 - Dec2019 (4 semaines)</p>
+                        </div>
+
                     </li>
                     <li class="list">
-                        <img class="img" src="Images/taunt.png"> Community Manager TauntFr | 2020 - Aujourd'hui
+                        <img class="img" src="Images/taunt.png">
+                        <div class="exp_content">
+                            <p>Community Manager TauntFr | 2020 - Aujourd'hui</p>
+                        </div>
+
                     </li>
-                    <li class="list"><img class="img" src="Images/horyjin.jpg">Manager d'équipe Esport | 2018 - Aujourd'hui</li>
+                    <li class="list">
+                        <img class="img" src="Images/horyjin.jpg">
+                        <div class="exp_content">
+                            <p>Manager d'équipe Esport | 2018 - Aujourd'hui</p>
+                        </div>
+
+                    </li>
                 </ul>
             </div>
         </div>
@@ -184,7 +229,7 @@
                     <a href="https://www.linkedin.com/in/maxime-bondeux-597a7217a/"><img class="img" src="Images/linkedin.svg"></a>
                 </div>
                 <div>
-                    <a href="https://codepen.io/maximebondeux"><img class="img" src="Images/CodePen.png"></a>
+                    <a href="https://codepen.io/maximebondeux"><img class="img" src="Images/codepen.svg"></a>
                 </div>
             </section>
         </section>
