--- a/Mobile.html
+++ b/Mobile.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style_mobile.css">
+    <!--<link rel="stylesheet" href="Style_mobile.css"> -->
+	<link rel="stylesheet" href="test.css">
     <title>CV en ligne</title>
 </head>
 
 <body>
-    <header>
-        <section id="header_main_section">
-
+    <header id="header_main_section">
             <section class="dropdown">
                 <button class="dropbtn">Menu</button>
                 <div class="dropdown-content">
@@ -33,8 +32,6 @@
                 <a href="CV_Bondeux_Maxime.pdf" download="CV_Bondeux_Maxime"><img class="icon" id="CV" src="Images/CV.svg"></a>
                 <p>CV.pdf</p>
             </section>
-
-        </section>
 
         <nav class="menu">
             <ul>
